--- a/VR_Final/Packages/manifest.json
+++ b/VR_Final/Packages/manifest.json
@@ -10,6 +10,9 @@
     "com.unity.timeline": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "2.0.2",
     "com.unity.xr.oculus.standalone": "1.29.1",
+    "com.unity.package-manager-ui": "2.0.3",
+    "com.unity.probuilder": "4.0.2",
+    "com.unity.progrids": "3.0.3-preview.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
