--- a/VR_Final/Packages/manifest.json
+++ b/VR_Final/Packages/manifest.json
@@ -1,14 +1,8 @@
 {
   "dependencies": {
-    "com.unity.ads": "2.0.8",
-    "com.unity.analytics": "3.3.2",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.multiplayer-hlapi": "1.0.2",
     "com.unity.package-manager-ui": "2.1.2",
-    "com.unity.purchasing": "2.0.6",
-    "com.unity.textmeshpro": "2.0.0",
-    "com.unity.timeline": "1.0.0",
-    "com.unity.xr.legacyinputhelpers": "2.0.2",
+    "com.unity.probuilder": "4.0.4",
+    "com.unity.progrids": "3.0.3-preview.4",
     "com.unity.xr.oculus.standalone": "1.29.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
